feat: wrap executions in try blocks