@@ -55,11 +55,15 @@ public class SamDAO implements ConsentLogger {
   public List<ResourceType> getResourceTypes(AuthUser authUser) throws Exception {
     GenericUrl genericUrl = new GenericUrl(configuration.getV1ResourceTypesUrl());
     HttpRequest request = clientUtil.buildGetRequest(genericUrl, authUser);
-    HttpResponse response = executeRequest(request);
-    if (!response.isSuccessStatusCode()) {
-      logException("Error getting resource types from Sam: " + response.getStatusMessage(),
-          new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
-      logWarn("Sam is down, returning mock List<ResourceType> for user %s".formatted(authUser.getEmail()));
+    HttpResponse response;
+    try {
+      response = executeRequest(request);
+      if (!response.isSuccessStatusCode()) {
+        logException("Error getting resource types from Sam: " + response.getStatusMessage(),
+            new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
+      }
+    } catch (ServerErrorException e) {
+      logException("Sam is down, returning mock List<ResourceType> for user %s".formatted(authUser.getEmail()), e);
       return List.of();
     }
     String body = response.parseAsString();
@@ -71,12 +75,16 @@ public class SamDAO implements ConsentLogger {
   public UserStatusInfo getRegistrationInfo(AuthUser authUser) throws Exception {
     GenericUrl genericUrl = new GenericUrl(configuration.getRegisterUserV2SelfInfoUrl());
     HttpRequest request = clientUtil.buildGetRequest(genericUrl, authUser);
-    HttpResponse response = executeRequest(request);
-    if (!response.isSuccessStatusCode()) {
-      logException(
-          "Error getting user registration information from Sam: " + response.getStatusMessage(),
-          new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
-      logWarn("Sam is down, returning mock UserStatusInfo for user %s".formatted(authUser.getEmail()));
+    HttpResponse response;
+    try {
+      response = executeRequest(request);
+      if (!response.isSuccessStatusCode()) {
+        logException(
+            "Error getting user registration information from Sam: " + response.getStatusMessage(),
+            new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
+      }
+    } catch (ServerErrorException e) {
+      logException("Sam is down, returning mock UserStatusInfo for user %s".formatted(authUser.getEmail()), e);
       UserStatusInfo userStatusInfo = new UserStatusInfo();
       userStatusInfo.setAdminEnabled(false);
       userStatusInfo.setEnabled(true);
@@ -91,12 +99,16 @@ public class SamDAO implements ConsentLogger {
   public UserStatusDiagnostics getSelfDiagnostics(AuthUser authUser) throws Exception {
     GenericUrl genericUrl = new GenericUrl(configuration.getV2SelfDiagnosticsUrl());
     HttpRequest request = clientUtil.buildGetRequest(genericUrl, authUser);
-    HttpResponse response = executeRequest(request);
-    if (!response.isSuccessStatusCode()) {
-      logException(
-          "Error getting enabled statuses of user from Sam: " + response.getStatusMessage(),
-          new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
-      logWarn("Sam is down, returning mock UserStatusDiagnostics for user %s".formatted(authUser.getEmail()));
+    HttpResponse response;
+    try {
+      response = executeRequest(request);
+      if (!response.isSuccessStatusCode()) {
+        logException(
+            "Error getting enabled statuses of user from Sam: " + response.getStatusMessage(),
+            new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
+      }
+    } catch (ServerErrorException e) {
+      logException("Sam is down, returning mock UserStatusDiagnostics for user %s".formatted(authUser.getEmail()), e);
       UserStatusDiagnostics userStatusDiagnostics = new UserStatusDiagnostics();
       userStatusDiagnostics.setAdminEnabled(false);
       userStatusDiagnostics.setEnabled(true);
@@ -112,22 +124,38 @@ public class SamDAO implements ConsentLogger {
   public UserStatus postRegistrationInfo(AuthUser authUser) throws Exception {
     GenericUrl genericUrl = new GenericUrl(configuration.postRegisterUserV2SelfUrl());
     HttpRequest request = clientUtil.buildPostRequest(genericUrl, new EmptyContent(), authUser);
-    HttpResponse response = executeRequest(request);
-    String body = response.parseAsString();
-    if (!response.isSuccessStatusCode()) {
-      if (HttpStatusCodes.STATUS_CODE_CONFLICT == response.getStatusCode()) {
-        throw new ConsentConflictException("User exists in Sam: " + authUser.getEmail());
-      } else {
-        String errorMsg = String.format("Error posting user registration information to Sam. Email [%s]. Status Code [%s]; Status Message [%s];  ",
-          authUser.getEmail(),
-          response.getStatusCode(),
-          response.getStatusMessage());
-        Exception e = new Exception(body);
-        logException(errorMsg, new Exception(body));
-        throw e;
+    HttpResponse response;
+    try {
+      response = executeRequest(request);
+      String body = response.parseAsString();
+      if (!response.isSuccessStatusCode()) {
+        if (HttpStatusCodes.STATUS_CODE_CONFLICT == response.getStatusCode()) {
+          throw new ConsentConflictException("User exists in Sam: " + authUser.getEmail());
+        } else {
+          String errorMsg = String.format("Error posting user registration information to Sam. Email [%s]. Status Code [%s]; Status Message [%s];  ",
+              authUser.getEmail(),
+              response.getStatusCode(),
+              response.getStatusMessage());
+          Exception e = new Exception(body);
+          logException(errorMsg, new Exception(body));
+          throw e;
+        }
       }
+      return new Gson().fromJson(body, UserStatus.class);
+    } catch (ServerErrorException e) {
+      logException("Sam is down, returning mock UserStatus for user %s".formatted(authUser.getEmail()), e);
+      UserStatus userStatus = new UserStatus();
+      UserStatus.Enabled enabled = new UserStatus.Enabled();
+      enabled.setLdap(true);
+      enabled.setAllUsersGroup(true);
+      enabled.setGoogle(true);
+      UserStatus.UserInfo userInfo = new UserStatus.UserInfo();
+      userInfo.setUserEmail(authUser.getEmail());
+      userInfo.setUserSubjectId("Mock user subject id");
+      userStatus.setEnabled(enabled);
+      userStatus.setUserInfo(userInfo);
+      return userStatus;
     }
-    return new Gson().fromJson(body, UserStatus.class);
   }
 
   public void asyncPostRegistrationInfo(AuthUser authUser) {
@@ -145,7 +173,7 @@ public class SamDAO implements ConsentLogger {
 
           @Override
           public void onFailure(@NonNull Throwable throwable) {
-            logWarn("Async Post Registration Failure for user: " + authUser.getEmail() + "; " + throwable.getMessage());
+            logException("Async Post Registration Failure for user: %s".formatted(authUser.getEmail()), new Exception(throwable));
           }
         },
         listeningExecutorService);
@@ -155,11 +183,15 @@ public class SamDAO implements ConsentLogger {
     GenericUrl genericUrl = new GenericUrl(configuration.getToSTextUrl());
     HttpRequest request = clientUtil.buildUnAuthedGetRequest(genericUrl);
     request.getHeaders().setAccept(MediaType.TEXT_PLAIN);
-    HttpResponse response = executeRequest(request);
-    if (!response.isSuccessStatusCode()) {
-      logException("Error getting Terms of Service text from Sam: " + response.getStatusMessage(),
-          new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
-      logWarn("Sam is down, returning mock Terms of Service Text");
+    HttpResponse response;
+    try {
+      response = executeRequest(request);
+      if (!response.isSuccessStatusCode()) {
+        logException("Error getting Terms of Service text from Sam: " + response.getStatusMessage(),
+            new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
+      }
+    } catch (ServerErrorException e) {
+      logException("Sam is down, returning mock Terms of Service Text", e);
       return "Terms of Service Text";
     }
     return response.parseAsString();
@@ -168,17 +200,22 @@ public class SamDAO implements ConsentLogger {
   public TosResponse getTosResponse(AuthUser authUser) throws Exception {
     GenericUrl genericUrl = new GenericUrl(configuration.getSelfTosUrl());
     HttpRequest request = clientUtil.buildGetRequest(genericUrl, authUser);
-    HttpResponse response = executeRequest(request);
-    if (!response.isSuccessStatusCode()) {
-      logException(String.format("Error getting Terms of Service: %s for user %s", response.getStatusMessage(), authUser.getEmail()),
-          new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
-      logWarn("Sam is down, returning mock TosResponse for user: %s".formatted(authUser.getEmail()));
+    HttpResponse response;
+    try {
+      response = executeRequest(request);
+      if (!response.isSuccessStatusCode()) {
+        logException(String.format("Error getting Terms of Service: %s for user %s",
+                response.getStatusMessage(), authUser.getEmail()),
+            new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
+      }
+    } catch (ServerErrorException e) {
+      logException(
+          "Sam is down, returning mock TosResponse for user: %s".formatted(authUser.getEmail()), e);
       return new TosResponse(
           new Date().toString(),
           true,
           "2023-11-15",
-          true
-      );
+          true);
     }
     String body = response.parseAsString();
     return new Gson().fromJson(body, TosResponse.class);
@@ -187,11 +224,15 @@ public class SamDAO implements ConsentLogger {
   public int acceptTosStatus(AuthUser authUser) throws Exception {
     GenericUrl genericUrl = new GenericUrl(configuration.acceptTosUrl());
     HttpRequest request = clientUtil.buildPutRequest(genericUrl, new EmptyContent(), authUser);
-    HttpResponse response = executeRequest(request);
-    if (!response.isSuccessStatusCode()) {
-      logException(String.format("Error accepting Terms of Service: %s for user %s", response.getStatusMessage(), authUser.getEmail()),
-          new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
-      logWarn("Sam is down, returning mock ToS Acceptance Status for user: %s".formatted(authUser.getEmail()));
+    HttpResponse response;
+    try {
+      response = executeRequest(request);
+      if (!response.isSuccessStatusCode()) {
+        logException(String.format("Error accepting Terms of Service: %s for user %s", response.getStatusMessage(), authUser.getEmail()),
+            new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
+      }
+    } catch (ServerErrorException e) {
+      logException("Sam is down, returning mock ToS Acceptance Status for user: %s".formatted(authUser.getEmail()), e);
       return 204;
     }
     return response.getStatusCode();
@@ -200,12 +241,16 @@ public class SamDAO implements ConsentLogger {
   public int rejectTosStatus(AuthUser authUser) throws Exception {
     GenericUrl genericUrl = new GenericUrl(configuration.rejectTosUrl());
     HttpRequest request = clientUtil.buildPutRequest(genericUrl, new EmptyContent(), authUser);
-    HttpResponse response = executeRequest(request);
-    if (!response.isSuccessStatusCode()) {
-      logException(
-          String.format("Error removing Terms of Service: %s for user %s", response.getStatusMessage(), authUser.getEmail()),
-          new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
-      logWarn("Sam is down, returning mock ToS Rejection Status for user: %s".formatted(authUser.getEmail()));
+    HttpResponse response;
+    try {
+      response = executeRequest(request);
+      if (!response.isSuccessStatusCode()) {
+        logException(
+            String.format("Error removing Terms of Service: %s for user %s", response.getStatusMessage(), authUser.getEmail()),
+            new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
+      }
+    } catch (ServerErrorException e) {
+      logException("Sam is down, returning mock ToS Rejection Status for user: %s".formatted(authUser.getEmail()), e);
       return 204;
     }
     return response.getStatusCode();
@@ -214,12 +259,16 @@ public class SamDAO implements ConsentLogger {
   public EmailResponse getV1UserByEmail(AuthUser authUser, String email) throws Exception {
     GenericUrl genericUrl = new GenericUrl(configuration.getV1UserUrl(email));
     HttpRequest request = clientUtil.buildGetRequest(genericUrl, authUser);
-    HttpResponse response = executeRequest(request);
-    if (!response.isSuccessStatusCode()) {
-      logException(
-          "Error getting user by email from Sam: " + response.getStatusMessage(),
-          new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
-      logWarn("Sam is down, returning mock EmailResponse for user: %s".formatted(authUser.getEmail()));
+    HttpResponse response;
+    try {
+      response = executeRequest(request);
+      if (!response.isSuccessStatusCode()) {
+        logException(
+            "Error getting user by email from Sam: " + response.getStatusMessage(),
+            new ServerErrorException(response.getStatusMessage(), response.getStatusCode()));
+      }
+    } catch (ServerErrorException e) {
+      logException("Sam is down, returning mock EmailResponse for user: %s".formatted(authUser.getEmail()), e);
       return new EmailResponse(
           "Mock google subject id",
           authUser.getEmail(),
